public/assets/css/style.css
@import url(http://fonts.googleapis.com/earlyaccess/lohitdevanagari.css); 

:root {
  --fs-base: 16px;
  --fs-heading: 25px;
  --fw-900: 700;
  --fw-600: 500;
  --fw-400: 400;
  --clr-bg: #e7f5e0;
  --clr-bg-card: #cec9c9;
  --clr-bg-primary: #6aa96c;
  --clr-bg-card-cnt: #d9d8d8;
  --button-color-secondary: #4d504A;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

.hidden {
  display: none;
}



.gif-area {
  min-height: 80vh;
  position: relative;
  width: 100%;
  position: relative;

  
  background: url('../images/bg-gif.gif') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: contain;
  background-size: cover;
}

.wrapper {
  width: 90vw;
  margin-inline: auto;

}

.wrapper .grid_layout {
  display: grid;
  /* position: relative; */
  grid-template-columns: repeat(12, 1fr);
  /* z-index: inherit; */
  /* position: absolute; */
  padding: 1rem;
  opacity: 1;
  /* z-index: 99; */
  
  
}

.wrapper .grid_layout .nav__links:not(.hidden) {
  grid-column: 4/10;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.wrapper .grid_layout .nav__links-mobl {
  display: none;
  grid-template-columns: 1fr;
  position: absolute;
  top: 10svh;
  width: 100%;
  background: gray;
  left: 0;
  padding: 1rem 0;
  text-align: center;
}

.wrapper .grid_layout .nav__links-mobl>a {
  list-style-type: none;
  /* font-family: 'Lohit Devanagari', serif;  */
  /* margin: 0; */
  text-decoration: none;
  color: white;
  margin-block: 0.26rem;

}

.wrapper .grid_layout .nav__links>a:hover {
  color: gainsboro;
}

.wrapper .grid_layout .nav__links-mobl div button {
  border-radius: 6px;
  border: thin;
  margin-block: 0.3rem;
}

.wrapper .grid_layout .nav__links ul {
  display: flex;
  list-style: none;
}

.wrapper .grid_layout .nav__links ul li a {
  text-decoration: none;
  font-size: var(--fs-base);
  color: white;
  margin-inline: 1rem;

}
.wrapper .grid_layout .nav__links ul li a:hover{
  color: rgb(128, 198, 236);
  transform: scale(1.1);

}
.cross {
  display: none;
  grid-column: 11/12;
}

.cross .top,
.middle,
.bottom {
  width: 20px;
  height: 2.5px;
  background: #000;
  transition: all 0.2s ease-in;
}

.middle {
  margin-top: 2.5px;
}

.bottom {
  margin-top: 3px;
  /* height:1.5px; */
}

.middle-active {
  display: none;
}

.top-active {
  transform: rotate(45deg);
  transform-origin: 6px center;
}

.bottom-active {
  transform: rotate(-45deg);
  transform-origin: 7px 3px;
}

.cross {
  grid-column: 12/12;
  margin-top: 10px;
}

/* .cross{
 display: none; 
} */
.wrapper .grid_layout .nav__button:not(.hidden) {
  grid-column: 11/12;
}

.wrapper .grid_layout .nav__button button {
  padding: 2px 25px;

  /* border: none; */
  background: transparent;
  border: thin solid black;
  color: white;
  cursor: pointer;

  /* overflow: hidden; */
  outline: none;
  border-radius: 7%;
}

.wrapper .grid_layout .nav__button button:hover {
  color: rgba(255, 255, 255, 1);
  /* background: #98c4c4; */
  box-shadow: 0 5px 15px rgba(7, 168, 255, 0.4);
  transform: scale(1.1);
}


.hero {
  display: grid;
  margin-block: 4rem;
  padding: 1rem;
  /* border: 1px solid green; */
  /* min-height: 20rem; */
  grid-template-columns: repeat(12, 1fr);
  /* border: 2px solid red;/ */
  align-content: center;
  justify-self: center;
}

.hero .hero__content {
  grid-column: 1/4;
  color: white;

}

.hero .hero__content>p {

  margin-block-end: 1rem;
  margin-block-start: 0;
}

.hero .hero__content a button {
  padding: 2px 35px;
  align-self: center;
  margin-inline: 3rem;
  border-radius: 5px;
  outline: none;
  border: thin;
}


.hero .hero__content a button:hover{
  color: rgb(20, 19, 19);
  /* background: #98c4c4; */
  box-shadow: 0 5px 15px rgba(7, 168, 255, 0.4);
  transform: scale(1.1);
}

.hero .hero__notice {
  grid-column: 9/12;
  color: white;
  /* border: 2px solid grey; */
  padding: 5px;
  width: clamp(100%, 80%, 60%);
  /* display: grid; */
  min-height: clamp(15rem, 8rem, 4rem);
  background-image: url('../images/Rectangle\ 4-2.png');
  border-radius: 5%;
}

.hero .hero__notice h2 {
  color: black;
  text-align: center;
  margin-block-end: 0.5rem;

}

.hero .hero__notice .notice__card {
  width: 95%;
  margin-inline: auto;
  margin-block: 0.4rem;
  padding: 2px;
  border-radius: 5px;
  background: var(--clr-bg-card-cnt);
  background-repeat: no-repeat;
  object-fit: contain;
  color: black;
}

footer {
  background-color: #6aa96c;
  color: white;
  padding: 20px;
  text-align: center;
}

.footer-content {

  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.footer-section {
  flex: 1 1 300px;
  padding: 10px;
  margin: 10px 0;
}

.footer-section h2 {
  font-size: 18px;
  margin-bottom: 10px;
}

.footer-section p {
  font-size: 14px;
}

.footer-links {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: center;
}

.footer-links li {
  margin: 0 10px;
}

.footer-links a {
  color: white;
  text-decoration: none;
}

.footer-links a:hover {
  text-decoration: underline;
}

.copyright {
  margin-top: 20px;
  font-size: 12px;
}

.table {
  margin-block: 2rem;
}

table {
  width: 100%;
  border-collapse: collapse;
}

/* Zebra striping */
tr:nth-of-type(odd) {
  background: #eee;
}

th {
  background: #333;
  color: white;
  font-weight: bold;
}

td,
th {
  padding: 6px;
  border: 1px solid #ccc;
  text-align: left;
}

.imgarea {
  display: flex;
  align-content: center;
  align-items: center;
  justify-content: center;
  min-height: 40vh;
  object-fit: cover;
  object-position: center;
  background-size: 100% 100%;
  background-color: var(--clr-bg-card);
}

.imgarea img {
  width: 10rem
}

.seed__detail {
  background-color: #BFD9AE;
  min-height: 26svh;
  margin-top: -8vh;
  border-radius: 10px;
  width: 70%;
  margin-inline: auto;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  gap: 1rem;

}

.seed__detail-card {
  grid-column: 1/9;
}

.seed_detail-info {
  border-left: 1px solid rgb(255, 255, 255);
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  grid-column: 10/13;
  display: grid;
  align-items: center;
  justify-items: center;
  gap: 0;
}

.heading {
  color: green;
  padding: 0;
}

@media screen and (max-width:1000px) {
  .wrapper .grid_layout .nav__button:not(.hidden) {
    grid-column: 13;
  }
  .seed__detail {
    background-color: #BFD9AE;
    min-height: 30svh;
    margin-top: -8vh;
    border-radius: 10px;
    width: 90%;
    margin-inline: auto;
    display: block;
    grid-template-columns: 1fr;
    gap: 1rem;
  }

  table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 20px;
  }

  th,
  td {
    border: 1px solid #dddddd;
    text-align: left;
    padding: 8px;
  }

  .font-semibold {
    font-weight: bold;
  }

  .w-8 {
    width: 8%;
  }

  .w-10-6 {
    width: 10.6%;
  }

  .w-5 {
    width: 5%;
  }

  .cursor-pointer {
    cursor: pointer;
  }

  .hero .hero__content {
    grid-column: 1/6;
    color: white;

  }

  .hero .hero__notice {
    grid-column: 8/13;
    background-image: url('../images/Rectangle\ 4-2.png');

  }

  .wrapper .grid_layout .nav__links {
    grid-template-columns: 3/10;
  }
}

.wrapper .heading {
  display: flex;
  align-items: center;
  justify-content: space-between;

}

.wrapper .heading button {
  background-color: var(--button-color-secondary);
  outline: none;
  border: thick;
  padding-inline: 0.5rem;
  border-radius: 5px;
  color: white;
}



.seed__grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10rem, 5fr));
  padding: 1rem 0;
  gap: 10px;


}

.seed__grid a {
  text-decoration: none;
  color: black;
  width: 12vw;
  min-width: 140px;
  min-height: 140px;
}

.seed__grid a div div {
  width: 11vw;
  min-width: 150px;
  border-radius: 5px;
  height: 10vw;
  min-height: 150px;
  background: var(--clr-bg-card);
  cursor: pointer;
  margin-inline: auto;


}

.seed__grid a>div:hover {
  transform: scale(1.1);
}


.seed__grid a  div {
  width: 12vw;
  min-width: 140px;
  min-height: 140px;
  margin-block-end: 1.5rem;
  border-radius: 5px;
 
  overflow: hidden;
  
  image-rendering: optimizeQuality;
}


.presticides__grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10rem, 5fr));
  padding: 1rem 0;
  gap: 10px;


}

.presticides__grid a {
  text-decoration: none;
  color: black;
  width: 12vw;
  min-width: 140px;
  min-height: 140px;
}

.presticides__grid a div>div {
  width: 11vw;
  min-width: 150px;
  border-radius: 5px;
  height: 10vw;
  min-height: 150px;
  background: var(--clr-bg-card);
  cursor: pointer;
  margin-inline: auto;
  overflow: hidden;

}

.presticides__grid a div div {
  display: flex;
  align-content: center;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.presticides__grid a div div img {
  max-width: 80%  ;

}

.presticides__grid a>div:hover {
  transform: scale(1.1);
}


.presticides__grid a>div {
  width: 12vw;
  min-width: 140px;
  min-height: 140px;
  margin-block-end: 1.5rem;
  border-radius: 5px;
 
}

.expert-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10rem, 5fr));
  padding: 1rem 0;
  gap: 10px;

}

.expert-grid .expert-grid__card {
  width: 11vw;
  min-width: 150px;
  border-radius: 5px;
  height: 10vw;
  min-height: 150px;
  background: var(--clr-bg-card);
  cursor: pointer;
  margin-inline: auto;
  
}




@media screen and (max-width:768px) {
  /* .seed__detail .seed_detail-info {
    margin-block: 1re;
    margin-inline: 1re;
  } */

  .wrapper .grid_layout .nav__links:not(.hidden) {
    display: none;
  }

  footer .footer-content .footer-section {
    flex: 1 1 100%;
  }


  .wrapper .grid_layout .nav__button {
    display: none;
  }

  .wrapper .grid_layout .nav__links-mobl:not(.hidden) {
    display: grid;
  }

  .cross {
    display: block;
    grid-column: 11/12;
  }

  .hero .hero__notice {
    grid-column: 9/13;
    color: white;
    border: none;
    padding: 5px;
    width: clamp(100%, 80%, 60%);
    min-height: 12rem;
    object-fit: unset;
    background-image: url('../images/Rectangle\ 4-3.png');
    border-radius: 5%;
  }

  .hero {
    display: flex;
    flex-direction: column;
    margin-block: 1.5rem;
    padding: 1rem;
    align-content: center;
    justify-self: center;
  }
  .hero>div {
    margin-block: 1.5rem;
    margin-inline: auto;
    text-align: center;

  }
}

